# laiive

./: .docker-compose.yml  .env.example  .example.env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  notes.txt  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yml
LICENSES/: CHANGE_LICENSE_DATE.txt  CODE_OF_CONDUCT.md  COLLABOATOR_AGREEMENT.md  LICENSE  LICENSE_PRECHANGE.txt  THIRD_PARTY_LICENSES.md
RAG-chat/: Dockerfile  README.md  pyproject.toml
data/: backup.sql  laiive_backup.sql  laiive_data_backup.sql  laiive_schema_backup.sql  migration_add_timestamps.sql  mook_data.sql
frontend/: .dockerignore  Dockerfile  README.md
legacy/: Makefile  docker-compose.override.yml
legacy/database/: pg_schema.sql  schema.sql
legacy/services/frontend/: Makefile  config.py  main.py
legacy/services/parser/: config.py
legacy/services/parser/tests/: test_parser.py
legacy/services/retriever/: .example.env  Dockerfile  README.md
legacy/services/retriever/src/: main.py
legacy/services/retriever/tests/: test_llm_factory.py
legacy/services/scraper/: pyproject.toml
legacy/services/scraper/event_scraper/: main.py
legacy/services/scraper/event_scraper/spiders/: eppen_music.py
services/RAG-chat/: .example.env  Dockerfile  Makefile  main.py  pyproject.toml  simple.dockerfile
services/RAG-chat/rag_chat/: api.py  main.py
services/RAG-chat/src/: config.py  main.py  rag.py
services/frontend/: .env.dev  .env.prod  Dockerfile  Makefile  main.py  pyproject.toml
services/parser/: parser.py
services/pusher/: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
services/retriever/: .example.env  Dockerfile  Makefile  README.md  config.py  pyproject.toml  pytest.ini
services/retriever/agent/: api.py  orchestrator.py
services/retriever/agent/agents/: db_query_agent.py  safety_guard.py
services/retriever/agent/clients/: neo4j_client.py
services/retriever/schemas/: chat.py
services/retriever/src/: api.py  config.py  main.py
services/scraper/: Dockerfile  Makefile  pyproject.toml
services/scraper/db_parser/: config.py  parser.py
services/scraper/event_scraper/: config.py  main.py
services/scraper/event_scraper/spiders/: eppen.py  eppen_music.py
services/scraper/event_scraper/utils/: pandas_inspect.py
test/: test_parser.py
