[project]
name = "retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "llama-index-llms-anthropic>=0.10.0",
    "llama-index-llms-gemini>=0.6.1",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-llms-openai>=0.6.7",
    "loguru>=0.7.3",
    "openai>=1.98.0",
    "pgvector>=0.4.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]
