[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataparser>=0.0.2",
    "loguru>=0.7.3",
    "pandas>=2.3.1",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "scrapy>=2.13.3",
]
